# CICD_Herman-Mohad

./: README.md
.github/workflows/: ci.yml
menu-front/: README.md  setup.cfg
menu-front/src/: menufront.py  requirements.txt
menu-front/src/main/: list.py  menufront.py  test_menu_front.py
menu-front/src/main/utils/: list.py
menu-front/src/services/: constants.txt  delete.py  list.py  services.py
menu-front/src/test/: constants.py  test_deletemenus.py  test_listmenus.py  test_menu_front.py
src/: setup.cfg
src/test/: test_menu_front.py
