[metadata]
name = menuFRont
version = 0.0.1
author = Herman_Mohad
author_email = melodiamohad@gmail.com
description = A front menu for using menu server
long_description = file: ../README.md
long_description_content_type = text/markdown
url = https://github.com/MelodiaM5/CICD_Herman-Mohad
project_urls =
    Bug Tracker = https://github.com/MelodiaM5/CICD_Herman-Mohad.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src